--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,6 +5,7 @@ html {
 }
 body {
   margin: 0;
+  background-color: #242628;
 }
 article,
 aside,
@@ -197,8 +198,8 @@ html {
   box-sizing: inherit;
 }
 body {
-  color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  color: hsl(0, 0%, 100%);
+  font-family: Helvetica, sans-serif, serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
